Fix block change tracker causing a crash when chunks are reloaded